--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,22 @@
-@import './base.css';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
+h1 {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+p {
+  margin-bottom: 1rem;
+  margin-left: 1rem
+}
 
 #app {
   height: inherit;
