--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -35,6 +35,15 @@ p {
   padding: 3px;
 }
 
+.fade-in {
+    @apply opacity-0 translate-y-3 transition-all duration-700 ease-out data-[visible=true]:opacity-100 data-[visible=true]:translate-y-0;
+}
+
+.fade-in.is-visible {
+    @apply opacity-100 translate-y-0;
+    transform: none;
+}
+
 @media (hover: hover) {
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
