--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -44,6 +44,10 @@ p {
     transform: none;
 }
 
+body {
+    @apply bg-slate-50
+}
+
 @media (hover: hover) {
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
